--- a/WebGPT/style.css
+++ b/WebGPT/style.css
@@ -109,7 +109,7 @@ body {
    width: 100%;
    height: 70vh;
    margin: 0 auto;
-   overflow-y: none;
+   overflow-x: scroll;
 }
 #input-container {
    width: 80%;
@@ -156,7 +156,7 @@ body {
    color: #fff;
    border: none;
    border-radius: 4px;
-   padding: 5px 10px;
+   padding: 5px 15px;
    font-size: 16px;
    cursor: pointer;
    font-weight: 600;
