--- a/style.css
+++ b/style.css
@@ -98,16 +98,16 @@ body {
    width: 100%;
    height: 80vh;
    margin: 0 auto;
-   overflow-y: scroll;
+   overflow-y: none;
    border-radius: 8px;
    background: #343541;
    box-shadow: inset 0px 0px 4px 0px #202123;
 }
 #chat-container {
    width: 100%;
-   height: 75vh;
+   height: 70vh;
    margin: 0 auto;
-   overflow-y: scroll;
+   overflow-x: scroll;
 }
 #input-container {
    width: 80%;
